[package]
name = "prettylog"
version = "0.1.2"
description = "Pretty log messages for your CLI"
authors = ["Joao Henrique Machado Silva <joaoh82@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaoh82/rust-prettylog"
homepage = "https://github.com/joaoh82/rust-prettylog"
documentation = "https://docs.rs/prettylog"

[dependencies]
